--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	<dependency>
+		<groupId>io.swagger.core.v3</groupId>
+		<artifactId>swagger-annotations</artifactId>
+		<version>2.2.41</version>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+		<version>2.3.0</version>
+	</dependency>
 	</dependencies>
 
 	<build>
