--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,6 @@ services:
     image: ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest
     container_name: franchise-api
     ports:
-      - "80:8080"
       - "8080:8080"
     environment:
       SPRING_R2DBC_URL: r2dbc:mysql://${RDS_HOST}:3306/franchise_db
@@ -20,8 +19,7 @@ services:
       retries: 3
       start_period: 40s
     logging:
-      driver: "awslogs"
+      driver: "json-file"
       options:
-        awslogs-group: "/aws/ecs/franchise-api"
-        awslogs-region: "us-east-1"
-        awslogs-stream-prefix: "ecs"
+        max-size: "10m"
+        max-file: "3"
