--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: 'maven'
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
@@ -46,46 +47,25 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Wait for SSM Agent to be ready
-        env:
-          EC2_INSTANCE_ID: ${{ secrets.EC2_INSTANCE_ID }}
-        run: |
-          echo "Verificando conexión con la instancia $EC2_INSTANCE_ID..."
-          for i in {1..15}; do
-            STATUS=$(aws ssm describe-instance-information \
-              --filters "Key=InstanceIds,Values=$EC2_INSTANCE_ID" \
-              --query "InstanceInformationList[0].PingStatus" \
-              --output text)
-            
-            if [ "$STATUS" == "Online" ]; then
-              echo "✅ SSM Agent está ONLINE"
-              exit 0
-            fi
-            
-            echo "Intento $i: Estado actual es ($STATUS). Esperando 10s..."
-            sleep 10
-          done
-          echo "❌ Error: La instancia no se puso online a tiempo."
-          exit 1
-
       - name: Deploy to EC2 via Systems Manager
         run: |
-          # Creamos el script que se ejecutará dentro de la EC2
-          cat <<EOF > remote_script.sh
-          # 1. Login en ECR
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
-          
-          # 2. Ir a la carpeta del proyecto
-          cd /home/ubuntu/franchise-api
-          
-          # 3. Crear el docker-compose.yml local con las variables reales
-          cat <<EOT > docker-compose.yml
-          version: '3.8'
+          aws ssm send-command \
+            --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
+            --document-name "AWS-RunShellScript" \
+            --region ${{ env.AWS_REGION }} \
+            --comment "Deploying updated DTO and code" \
+            --parameters commands='[
+              "sudo apt-get update && sudo apt-get install -y awscli",
+              "aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}",
+              "sudo mkdir -p /home/ubuntu/franchise-api",
+              "cd /home/ubuntu/franchise-api",
+              "sudo tee docker-compose.yml > /dev/null <<EOT
+          version: \"3.8\"
           services:
             app:
               image: ${{ steps.login-ecr.outputs.registry }}/${{ env.APP_NAME }}:latest
               ports:
-                - "8080:8080"
+                - \"8080:8080\"
               environment:
                 SPRING_R2DBC_URL: r2dbc:mysql://${{ secrets.RDS_HOST }}:3306/franchise_db
                 SPRING_R2DBC_USERNAME: ${{ secrets.DB_USERNAME }}
@@ -93,22 +73,10 @@ jobs:
                 SPRING_PROFILES_ACTIVE: prod
               restart: always
               logging:
-                driver: "json-file"
+                driver: \"json-file\"
                 options:
-                  max-size: "10m"
-          EOT
-          
-          # 4. Pull y despliegue
-          docker-compose pull
-          docker-compose up -d
-          EOF
-
-          # Convertimos a Base64 para enviarlo de forma segura
-          SCRIPT_B64=$(base64 -w 0 remote_script.sh)
-
-          # Enviamos el comando a la instancia
-          aws ssm send-command \
-            --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
-            --document-name "AWS-RunShellScript" \
-            --parameters "commands=[\"echo $SCRIPT_B64 | base64 -d | bash\"]" \
-            --region us-east-1
+                  max-size: \"10m\"
+          EOT",
+              "sudo docker-compose pull",
+              "sudo docker-compose up -d --force-recreate"
+            ]'
